src/objects/Comment__c.object
<CustomObject>
    <description>Used when there should be a 1:many relationship from record to comments.</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CampaignActivity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Activity</label>
        <referenceTo>CampaignActivity__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFHealthTechIssueLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Health Tech Issue Log</label>
        <referenceTo>SFHealthTechIssueLog__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Comment Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>